--- a/style/main.css
+++ b/style/main.css
@@ -1,1 +1,39 @@
-/* css code goes here/
+body{
+    background-color: aliceblue;
+}
+h1{
+    text-align: center;
+    padding: auto;
+    margin: auto;
+    background-color: rgb(191, 233, 233);
+    border-radius: 20px;
+}
+.container{
+    border: 3px solid rgb(63, 187, 236);
+    border-style: dotted;
+    border-radius: 20px;
+    padding: 10px;
+}
+p{
+    padding: auto;
+    text-align: center;
+}
+strong{
+    color: rgb(60, 126, 134);
+}
+h2{
+    width: 110px;
+    border:3px solid powderblue;
+    padding-left:10px;
+    border-radius: 20px;
+    margin-bottom: -10px;
+    background-color: rgb(191, 233, 233);
+    color: rgb(60, 126, 134);
+}
+.lists{
+    background-color: rgb(222, 239, 253);
+    width: 300px
+}
+li{
+    
+}
